# rfx

./: README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: rfx.sh
docs/: README.md  architecture.md  core-primitives.md  python-sdk.md  runtime.md  workflow-cli.md
rfx/crates/rfx-core/src/hardware/go2/: mod.rs
rfx/python/: README.md
rfx/python/rfx/: __init__.py  camera_streamer.py  decorators.py  deploy.py  platform_client.py
rfx/python/rfx/collection/: __init__.py  _cli.py
rfx/python/rfx/real/: __init__.py  base.py  innate.py
rfx/python/rfx/robot/: config.py
rfx/python/rfx/runtime/: cli.py
rfx/python/rfx/teleop/: benchmark.py
rfx/tests/: conftest.py  test_collection.py  test_decorators.py  test_deploy.py  test_envs.py  test_jit_runtime.py  test_runtime_dora.py  test_so101_auto_pair.py  test_teleop_session.py  test_teleop_transport_binding.py  test_teleop_transport_zenoh.py  test_workflow_cli.py  test_zenoh_defaults.py
